tests/should_fail/fn_mod_nonexistent.nv
module main

// SHOULD FAIL: fn extends on a module that doesn't exist
fn mod(NonExistentModule) myFunc(x: Int) -> Int {
    return x
}
